Dropbox/Trabalho/Pixeon/Bitbucket/pixeon-eng-sre-platform-04e299f662b3/containers/rancher2/dev-pixeon-hub/dev-pixeon-hub-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dev-pixeon-hub-ingress
  namespace: dev-pixeon-hub
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-production
spec:
  tls:
  - hosts:
    - dev.rest.hub.pixeon.cloud
    secretName: dev-pixeon-hub
  rules:
  - host: dev.rest.hub.pixeon.cloud
    http:
      paths:
      - backend:
          serviceName: dev-rest-hub
          servicePort: 9090
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dev-pixeon-hub-grpc-ingress
  namespace: dev-pixeon-hub
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  tls:
  - hosts:
    - dev.rest.hub.pixeon.cloud
    secretName: dev-pixeon-hub
  rules:
  - host: dev.grpc.hub.pixeon.cloud
    http:
      paths:
      - backend:
          serviceName: dev-grpc-hub
          servicePort: 8080
